--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "书签快速添加",
   "version": "2.0.2",
-  "description": "快速将书签添加到系统 http://yaksun.icu:83/ 中",
+  "description": "快速将书签添加到系统 http://139.224.195.82:8090/ 中",
   "icons": {
     "16": "img/icon.png",
     "48": "img/icon.png",
@@ -31,7 +31,7 @@
   ],
   "permissions": ["contextMenus", "activeTab", "storage"],
   "web_accessible_resources": ["js/inject.js"],
-  "homepage_url": "http://yaksun.icu:83/",
+  "homepage_url": "http://139.224.195.82:8090/",
   "omnibox": {
     "keyword": "bookmark"
   }
